# macro-allocation

./: .env.example  .gitignore  LICENSE  README.md  References.md  main.py  pyproject.toml
backtest/: __init__.py  __main__.py  engine.py
black_litterman/: __init__.py  __main__.py  optimizer.py
clock/: __init__.py  __main__.py  clock.py
config/: holdings.example.yaml  holdings_current.example.json  manual_sources.md  settings.yaml
decision_summary/: __init__.py  __main__.py  summarize.py
diagnostic/: __init__.py  __main__.py  analyzer.py
fund_rebalancer/: __init__.py  __main__.py  planner.py
fund_selector/: __init__.py  __main__.py  blocklist.py  ratings.py  recommender.py  selector.py  tracking.py
holdings_screener/: __init__.py  __main__.py  screener.py
holdings_sync/: __init__.py  __main__.py  parser.py
m1_news/: README.md  __init__.py  collector.py
m2_analysis/: README.md  __init__.py  analyzer.py  personas.py
m3_decision/: README.md  __init__.py  decider.py
portfolio_monitor/: holdings.example.json  weekly_report.py
rebalancer/: __init__.py  __main__.py  checker.py
report_fetcher/: __init__.py  __main__.py  business_mix.py  eastmoney.py  extract.py  screen.py
results_sync/: __init__.py  __main__.py  sync.py
risk_engine/: __init__.py  __main__.py  engine.py  fetcher.py
schedule/: register_task.ps1  run_quarterly.ps1  unregister_task.ps1
stock_selector/: __init__.py  __main__.py  basket.py  cache.py  calib_ic.py  chain_map.py  datasource.py  datasource_us.py  enrich.py  recall.py  score.py  verify.py
style_tilt/: __init__.py  (+3 more)
(+12 files in other folders)
