[project]
name = "macro-allocation"
version = "0.1.0"
description = "宏观配置 MVP - M1资讯 / M2分析 / M3决策 三模块"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.40.0",      # M2 分析模块：调用 DeepSeek（OpenAI 兼容接口）
    "pyyaml>=6.0",         # 读取 config 配置
    "python-dotenv>=1.0",  # 管理 API Keys
    "akshare>=1.18.64",
    "pandas>=3.0.3",
    "numpy>=2.4.6",
    "scikit-learn>=1.9.0",
    "pyportfolioopt>=1.6.0",
    "packaging>=26.2",
]

[dependency-groups]
dev = [
    "ipython>=8.0",
]

[tool.uv]
package = false
